--- a/main.ipynb
+++ b/main.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\Evan\\\\Documents\\\\GitHub\\\\FuturesStrategy'"
+       "'C:\\\\Users\\\\v9503\\\\Documents\\\\Github\\\\FuturesStrategy'"
       ]
      },
      "execution_count": 2,
@@ -32,6 +32,19 @@
    "source": [
     "work_dir = os.getcwd()\n",
     "work_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "*  TO DO\n",
+    "    * 自動爬取資料程式\n",
+    "    * 自動爬取未平倉量程式\n",
+    "    * 跑回測 變化量哪個N最好 分Training data/Validation set/ Testing set \n",
+    "    * 加入Fee and Tax\n",
+    "    * 加入NN"
    ]
   },
   {
@@ -1604,7 +1617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
